# unifi-voucher-manager

./: .env.example  .gitignore  PRINT_CUSTOMIZATION.md  PRINT_LAYOUT_CUSTOMIZATION.md  README.md  compose.yaml  docker-compose.yml  print-config.json  voucher-tiers.json
backend/: Cargo.toml
backend/src/: environment.rs  handlers.rs  lib.rs  main.rs  models.rs  tasks.rs  unifi_api.rs  voucher_config.rs
config/: print-config.json.example  voucher-tiers.json.example
frontend/: .gitignore  next.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/events/: route.ts
frontend/src/app/kiosk/: page.tsx
frontend/src/app/print/: page.tsx  styles.css
frontend/src/app/welcome/: page.tsx
frontend/src/components/: Header.tsx  VoucherCard.tsx  VoucherListItem.tsx
frontend/src/components/modals/: Modal.tsx  VoucherModal.tsx  WifiQrModal.tsx
frontend/src/components/tabs/: QuickCreateTab.tsx  Tabs.tsx  VouchersTab.tsx
frontend/src/components/utils/: VoucherCode.tsx  WifiQr.tsx
frontend/src/contexts/: GlobalContext.tsx
frontend/src/hooks/: useServerEvents.ts
frontend/src/types/: state.ts  voucher.ts
frontend/src/utils/: actions.ts  api.ts  format.ts  ipv4.ts  notifications.ts  sseManager.ts
scripts/: setup.sh
